Fix windows browsers rendering scrollbar on events cards

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -107,7 +107,8 @@ body {
   position: relative;
   font-size: 2em;
   font-weight: 500;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .card-flavor {
